--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="16x16" href="./tpo/imagenes/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../tpo/imagenes/favicon-16x16.png">
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="estilopagprin.css">
@@ -31,12 +31,12 @@
             <article class="present2">Hotel Boutique Paris, cuenta con 27 confortables habitaciones y suites, exquisitamente decoradas en tono marfil, ofreciendo 4 categorías: Classic, Luxury, Junior Suite y Sainte Jeanne Suite.</article>
         </section>
         <aside>
-            <img class="imagenes" src="/tpo/imagenes/hotelparis.jpg" alt="img1">
+            <img class="imagenes" src="../tpo/imagenes/hotelparis.jpg" alt="img1">
         </aside>
     </div>
     <div class="row">
         <aside>
-            <img class="imagenes" src="/tpo/imagenes/piscina.jpeg" alt="img2">
+            <img class="imagenes" src="../tpo/imagenes/piscina.jpeg" alt="img2">
         </aside>
         <section>
             <article class="present">Vení a descansar</article>
