cambio formato img

--- a/servicios.html
+++ b/servicios.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="16x16" href="/tpo/imagenes/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="imagenes/favicon-16x16.png">
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="estilotpo.css">
@@ -41,12 +41,12 @@
     </article>
     <article class="imgservicios">
         <!--Aca se inserto una transicion-->
-        <section class="transicion"><img src="/tpo/imagenes/servicios1.jpg"></section>
-        <section class="transicion"><img src="/tpo/imagenes/servicios2.jpg"></section>
-        <section class="transicion"><img src="/tpo/imagenes/servicios3.jpg"></section>
-        <section class="transicion"><img src="/tpo/imagenes/servicios4.jpg"></section>
-        <section class="transicion"><img src="/tpo/imagenes/servicios5.jpg"></section>
-        <section class="transicion"><img src="/tpo/imagenes/servicios6.jpg"></section>
+        <section class="transicion"><img src="imagenes/servicios1.jpg"></section>
+        <section class="transicion"><img src="imagenes/servicios2.jpg"></section>
+        <section class="transicion"><img src="imagenes/servicios3.jpg"></section>
+        <section class="transicion"><img src="imagenes/servicios4.jpg"></section>
+        <section class="transicion"><img src="imagenes/servicios5.jpg"></section>
+        <section class="transicion"><img src="imagenes/servicios6.jpg"></section>
 
     </article>
 
