--- a/habitaciones.html
+++ b/habitaciones.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="16x16" href="/tpo/imagenes/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="imagenes/favicon-16x16.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="estilotpo.css">
     <title>Hotel Boutique Paris</title>
@@ -26,7 +26,7 @@
     
     <div class="row">
         <aside>
-            <img class="imagenes" src="/tpo/imagenes/habclassic.jpg" alt="img3">
+            <img class="imagenes" src="imagenes/habclassic.jpg" alt="img3">
         </aside>
         <section>
             <article class="present">Classic</article>
@@ -35,7 +35,7 @@
     </div>
     <div class="row">
         <aside>
-            <img class="imagenes" src="/tpo/imagenes/habluxury.jpg" alt="img4">
+            <img class="imagenes" src="imagenes/habluxury.jpg" alt="img4">
         </aside>
         <section>
             <article class="present">Luxury</article>
@@ -44,7 +44,7 @@
     </div>
     <div class="row">
         <aside>
-            <img class="imagenes" src="/tpo/imagenes/habjrsuite.jpg" alt="img5">
+            <img class="imagenes" src="imagenes/habjrsuite.jpg" alt="img5">
         </aside>
         <section>
             <article class="present">Junior Suite</article>
@@ -53,7 +53,7 @@
     </div>
     <div class="row">
         <aside>
-            <img class="imagenes" src="/tpo/imagenes/habsuite.jpg" alt="img6">
+            <img class="imagenes" src="imagenes/habsuite.jpg" alt="img6">
         </aside>
         <section>
             <article class="present">Suite Boutique</article>
