--- a/contacto.html
+++ b/contacto.html
@@ -12,8 +12,8 @@
     <title>Hotel Boutique Paris</title></head>
 <body>
     <header ID="tit">
-        <h1>Hotel Boutique Paris</h1>
-        <h2>Contactános</h2>
+        <h1 ID="hotelbou">Hotel Boutique Paris</h1>
+        <h2 ID="contactanos">Contactános</h2>
      </header>
      <nav ID="barramenu">
         <a href="index.html" class="menu"><i class="fas fa-home"></i> Inicio</a>
